will only build for windows x64 now since each build takes too much space

--- a/package.json
+++ b/package.json
@@ -5,42 +5,10 @@
   "description": "Google Hangouts for Desktop!",
   "author": "Jimmy Gozal <jgozal@developerkit.co>",
   "main": "app.js",
-  "scripts": {
-    "postinstall": "install-app-deps",
-    "start": "npm install && electron ./app",
-    "pack": "build --dir",
-    "dist": "build"
-  },
-  "build": {
-    "appId": "com.electron.hangouts",
-    "dmg": {
-      "contents": [
-        {
-          "x": 110,
-          "y": 150
-        },
-        {
-          "x": 240,
-          "y": 150,
-          "type": "link",
-          "path": "/Applications"
-        }
-      ]
-    },
-    "linux": {
-      "target": [
-        "AppImage",
-        "deb"
-      ]
-    },
-    "win": {
-      "target": "NSIS",
-      "icon": "build/icon.ico"
-    }
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "electron": "latest",
-    "electron-builder": "latest"
+  "dependencies": {
+    "electron": "^1.6.2",
+    "electron-packager": "^8.6.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-winstaller": "^2.5.2"
   }
 }
